--- a/style.css
+++ b/style.css
@@ -1,8 +1,26 @@
 header{
-    width: 100%;
+    width: 60%;
     text-align: center;
     padding: 20px 0;
+    margin: 20px auto;
     font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.typecolor{
+    display: flex;
+    flex-direction: column;
+}
+
+.typecolor h2{
+    font-size: 15px;
+}
+
+.typecolor div{
+    font-size: 15px;
+    font-weight: 100;
 }
 
 .inputs{
